# sim-8086

./: .gitignore  CMakelists.txt  README.md  assemble.sh
sim8086/: CMakeLists.txt  CMakePresets.json  LICENSE  Notes.md  README.md  result.asm
sim8086/sim8086/: CMakeLists.txt  result.asm
sim8086/sim8086/res/: imm_reg_mov  imm_reg_mov.asm  mov_tst  mov_tst.asm  single_mem_reg_signed_mov  single_mem_reg_signed_mov.asm  single_reg_mem_mov  single_reg_mem_mov.asm
sim8086/sim8086/src/: .Main.cpp.swp  FileIO.h  Hardware.h  InstructionTable.h  InstructionTable.inl  Main.cpp  Sim8086.cpp  decoder.h  main-old.cpp  main-v2.cpp  main.cpp  main.i  sim8086.h
sim8086/sim8086/tests/: constants.py  imm_to_reg_mem  imm_to_reg_mem.asm  mem_to_acc  mem_to_acc.asm  mov_perf_tst  mov_perf_tst.asm  mov_tst.asm  mov_tst.out  multi_single_reg_mov.asm  result.asm  result.out  single_reg_mem_mov  single_reg_mem_mov.asm  single_reg_mov.asm  single_reg_mov_low.asm  test.sh  test_add.asm  test_arithmetic_decode.py  test_cmp.asm  test_dec.asm  test_decoder.py  test_decoder.sh  test_jmp.asm  test_main.c  test_main.cpp  test_mov.asm  test_mov_decode.py  test_pushpop.asm  test_simulator.py  test_sub.asm  test_utils.py  test_xchg.asm  tests.ps1
sim8086/sim8086/tests/asm/: acc_to_mem.asm  adc_imm_to_acc.asm  adc_imm_to_reg_mem.asm  adc_reg_mem_w_reg.asm  add_imm_to_acc.asm  add_imm_to_reg_mem.asm  add_reg_mem_w_reg.asm  debug_tst.asm  imm_to_reg_mem.asm  mem_to_acc.asm  mov_perf_tst.asm  mov_tst.asm  multi_single_reg_mov.asm  reg_mem_to_from_reg.asm
sim8086/sim8086/tests_old/: test_arithmetic_decode.py  test_mov_decode.py
sim8086/sim8086/tests_old/asm/: adc_imm_to_acc.asm  add_imm_to_acc.asm  mov_perf_tst.asm  reg_mem_to_from_reg.asm
src/: instructions.h  main.c  types.h
(+1 files in other folders)
